Add Update and List handlers for Application (#3)